--- a/NuGet.config
+++ b/NuGet.config
@@ -1,11 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+    <add key="repositorypath" value="packages" />
+  </config>
   <packageRestore>
     <add key="enabled" value="True" />
     <add key="automatic" value="True" />
   </packageRestore>
-
-  <solution>
-    <add key="disableSourceControlIntegration" value="true" />
-  </solution>
 </configuration>
